--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "drum",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://arupdawn.github.io/drum",
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "react": "^16.6.1",
+    "react-bootstrap": "^0.32.4",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1"
   },
@@ -11,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
